@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T01:41:19Z",
-  "count" : 19,
-  "count_minmax" : [ 19, 19 ],
-  "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 0,
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 6 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-25T16:27:46Z",
+  "count" : 12,
+  "count_minmax" : [ 12, 19 ],
+  "count_decinc" : [ -7, +0 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 5, 6 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
