@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-22T16:24:19Z",
+  "timestamp" : "2022-05-25T16:27:46Z",
   "count_outdated" : 235,
   "uniques_outdated" : 143,
-  "count" : 270,
-  "uniques" : 160,
+  "count" : 263,
+  "uniques" : 159,
   "clones" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
+      "count": 12,
+      "count_minmax": [ 12, 19 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 6 ]
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
