@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 11,
+  "count": 28,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 19,
-      "uniques": 6
+      "count": 12,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
