@@ -1,3 +1,10 @@
+2022-05-25T16:27:46Z:
+* notice: last 14d: unq all: 10 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 143 235 / 160 270
+* notice: next accum: outdated-unq outdated-all / unq all: 143 235 / 159 263
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -7 / +0 +0 -1 -7 / 5 12
+* notice: changed dates: [2022-05-11]
+
 2022-05-22T16:24:19Z:
 * notice: last 14d: unq all: 11 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 138 226 / 157 266
